# flappy-fagel

./: CMakeLists.txt  README.md  main.cpp
engine/: engine.cpp  engine.h  fagel_engine.cpp  fagel_engine.h  player.cpp  player.h
fagel/: fagel_engine.cpp  fagel_engine.h  player.h
matrix/: matrix.cpp  matrix.h
neural_net/: layer.cpp  layer.h  linear_layer.cpp  linear_layer.h  neural_net.cpp  neural_net.h
window/: coord.h  view.cpp  view.h  window.cpp  window.h
